DEX-26338 | fix: clean up block html and fix alignment

--- a/_src-lp/blocks/new-prod-boxes/new-prod-boxes.css
+++ b/_src-lp/blocks/new-prod-boxes/new-prod-boxes.css
@@ -312,6 +312,7 @@
 .new-prod-boxes-container .block .prod_box {
   flex: 1;
   margin: 1em 0;
+  margin-top: var(--green-tag-height);
 }
 
 .new-prod-boxes-container.book-a-demo .block .prod_box.individual-box:not(:has(~ .prod_box.individual-box)) .save_price_box *, .new-prod-boxes-container.book-a-demo .block .prod_box.individual-box:not(:has(~ .prod_box.individual-box)) .prices_box, .new-prod-boxes-container.book-a-demo .block .prod_box.family-box:not(:has(~ .prod_box.family-box)) .save_price_box *, .new-prod-boxes-container.book-a-demo .block .prod_box.family-box:not(:has(~ .prod_box.family-box)) .prices_box, .new-prod-boxes-container.book-a-demo .block .prod_box.individual-box:not(:has(~ .prod_box.individual-box)) .buy-btn, .new-prod-boxes-container.book-a-demo .block .prod_box.family-box:not(:has(~ .prod_box.family-box)) .buy-btn {
@@ -323,11 +324,12 @@
 }
 
 .new-prod-boxes-container .block .prod_box .blue-header .header-box {
-  width: 114%;
+  width: 124%;
   background-color: #026DFF;
   color: white;
   margin: 0;
   margin-top: -25px;
+  margin-bottom: -4px;
   padding: 25px 25px 4px;
   margin-left: -25px;
 }
@@ -1442,7 +1444,6 @@
   }
   .new-prod-boxes-container .block .prod_box {
     margin-bottom: 0 !important;
-    margin-top: var(--green-tag-height) !important;
   }
   .new-prod-boxes-container.trial-links-2 .block .prod_box .inner_prod_box .save-trial-text {
     min-height: auto !important;
